--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     ]
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "body-parser": "^1.20.2",
+    "body-parser-xml": "^2.0.5",
+    "express": "^4.18.2",
+    "morgan": "^1.10.0"
   }
 }
