--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "body-parser": "^1.20.2",
     "body-parser-xml": "^2.0.5",
     "express": "^4.18.2",
+    "mongoose": "^7.5.0",
     "morgan": "^1.10.0"
   }
 }
