--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "body-parser-xml": "^2.0.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.0",
     "morgan": "^1.10.0"
   }
